[gd_scene load_steps=6 format=2]

[ext_resource path="res://database.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/roboto_14.tres" type="DynamicFont" id=2]
[ext_resource path="res://table.tscn" type="PackedScene" id=3]
[ext_resource path="res://dlgs/new_table_dlg.tscn" type="PackedScene" id=4]
[ext_resource path="res://error_dlg.tscn" type="PackedScene" id=5]

[node name="database" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="HBoxContainer" parent="."]
margin_right = 1600.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="new_table_btn" type="Button" parent="menu"]
margin_right = 77.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "New Table"

[node name="save_db_btn" type="Button" parent="menu"]
margin_left = 81.0
margin_right = 186.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Save Database"

[node name="tables_lbl" type="Label" parent="."]
margin_top = 33.0
margin_right = 150.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "                 Tables"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tables_container" type="ItemList" parent="."]
margin_top = 50.0
margin_right = 150.0
margin_bottom = 900.0
rect_min_size = Vector2( 150, 850 )
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="table" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.22
margin_top = 50.0
margin_right = 1600.22
margin_bottom = 900.0

[node name="new_table_dlg" parent="." instance=ExtResource( 4 )]

[node name="error_dlg" parent="." instance=ExtResource( 5 )]
